--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Understanding TypeScript</title>
-  <script src="app.js" defer></script>
-  <script src="analytics.ts" defer ></script>
+  <script src="./files/app.js" defer></script>
+  <script src="./files/analytics.js" defer ></script>
 </head>
 <body>
+<button>Click</button>
   
 </body>
 </html>
