--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>ProjectManager</title>
     <link rel="stylesheet" href="app.css" />
-    <script src="dist/app.js" defer></script>
+    <script type="module" src="dist/app.js" ></script>
   </head>
   <body>
+    <div id="container">
     <template id="project-input">
       <form>
         <div class="form-control">
@@ -42,5 +43,6 @@
       </section>
     </template>
     <div id="app"></div>
+  </div>
   </body>
 </html>
